@@ -1,3 +1,11 @@
+2000-05-18  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* mn10300_sim.h (genericAdd, genericSub, genericCmp, genericOr,
+	genericXor, genericBtst): Use `unsigned32'.
+	* op_utils.c: Likewise.
+	* mn10300.igen, am33.igen: Use `unsigned32', `signed32',
+	`unsigned64' or `signed64' where type width is relevant.
+
 2000-04-25  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* am33.igen (inc4 Rn): Use genericAdd so as to modify flags.
